--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -727,6 +727,7 @@
      <Compile Include="Assets\Scripts\AchievementDisplay.cs" />
      <Compile Include="Assets\Scripts\AchievementManager.cs" />
      <Compile Include="Assets\Scripts\AchievementTracker.cs" />
+     <Compile Include="Assets\Scripts\AndyUtils.cs" />
      <Compile Include="Assets\Scripts\Apple.cs" />
      <Compile Include="Assets\Scripts\AppleCollider.cs" />
      <Compile Include="Assets\Scripts\Buttons\AchieveButton.cs" />
