--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -728,6 +728,9 @@
      <Compile Include="Assets\Scripts\AchievementManager.cs" />
      <Compile Include="Assets\Scripts\AchievementTracker.cs" />
      <Compile Include="Assets\Scripts\AndyUtils.cs" />
+     <Compile Include="Assets\Scripts\Apple.cs" />
+     <Compile Include="Assets\Scripts\AppleCollider.cs" />
+     <Compile Include="Assets\Scripts\BGStartup.cs" />
      <Compile Include="Assets\Scripts\Buttons\AchieveButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\BackToMain.cs" />
      <Compile Include="Assets\Scripts\Buttons\EnergyButton.cs" />
@@ -750,23 +753,20 @@
      <Compile Include="Assets\Scripts\Buttons\StorePurchaseButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\StoreUnlockableButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\StoreUpgradeButton.cs" />
-     <Compile Include="Assets\Scripts\GameModes\Apple.cs" />
-     <Compile Include="Assets\Scripts\GameModes\AppleCollider.cs" />
-     <Compile Include="Assets\Scripts\GameModes\BGStartup.cs" />
-     <Compile Include="Assets\Scripts\GameModes\HitGround.cs" />
-     <Compile Include="Assets\Scripts\GameModes\Spawner.cs" />
-     <Compile Include="Assets\Scripts\GameModes\TimerCountdown.cs" />
-     <Compile Include="Assets\Scripts\GameModes\UnityMersenneTwister.cs" />
-     <Compile Include="Assets\Scripts\GameModes\UnityNormalDistribution.cs" />
-     <Compile Include="Assets\Scripts\GameModes\playerAnimController.cs" />
      <Compile Include="Assets\Scripts\GameStartup.cs" />
+     <Compile Include="Assets\Scripts\HitGround.cs" />
      <Compile Include="Assets\Scripts\MainMenuAudio.cs" />
      <Compile Include="Assets\Scripts\OptionsDisplay.cs" />
      <Compile Include="Assets\Scripts\ShieldHitTrigger.cs" />
+     <Compile Include="Assets\Scripts\Spawner.cs" />
      <Compile Include="Assets\Scripts\SpinRay.cs" />
      <Compile Include="Assets\Scripts\StatStore.cs" />
      <Compile Include="Assets\Scripts\StatsDB.cs" />
+     <Compile Include="Assets\Scripts\TimerCountdown.cs" />
+     <Compile Include="Assets\Scripts\UnityMersenneTwister.cs" />
+     <Compile Include="Assets\Scripts\UnityNormalDistribution.cs" />
      <Compile Include="Assets\Scripts\UpgradeDisplay.cs" />
+     <Compile Include="Assets\Scripts\playerAnimController.cs" />
      <Compile Include="Assets\Store\Code\AndysApplesAssets.cs" />
      <Compile Include="Assets\Store\Code\BuyButton.cs" />
      <Compile Include="Assets\Store\Code\EquipButton.cs" />
