--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -44,10 +44,23 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Plugins\Android\RevMobAndroid.cs" />
+     <Compile Include="Assets\Plugins\Android\RevMobAndroidBanner.cs" />
+     <Compile Include="Assets\Plugins\Android\RevMobAndroidFullscreen.cs" />
+     <Compile Include="Assets\Plugins\Android\RevMobAndroidLink.cs" />
+     <Compile Include="Assets\Plugins\Android\RevMobAndroidNotification.cs" />
+     <Compile Include="Assets\Plugins\Android\RevMobAndroidPopup.cs" />
+     <Compile Include="Assets\Plugins\IRevMobListener.cs" />
      <Compile Include="Assets\Plugins\PlayHaven\Scripts\PlayHavenBinding.cs" />
      <Compile Include="Assets\Plugins\PlayHaven\Scripts\PlayHavenContentRequester.cs" />
      <Compile Include="Assets\Plugins\PlayHaven\Scripts\PlayHavenManager.cs" />
      <Compile Include="Assets\Plugins\PlayHaven\Scripts\PlayHavenVGPHandler.cs" />
+     <Compile Include="Assets\Plugins\RevMob.cs" />
+     <Compile Include="Assets\Plugins\RevMobBanner.cs" />
+     <Compile Include="Assets\Plugins\RevMobFullscreen.cs" />
+     <Compile Include="Assets\Plugins\RevMobLink.cs" />
+     <Compile Include="Assets\Plugins\RevMobNotification.cs" />
+     <Compile Include="Assets\Plugins\RevMobPopup.cs" />
      <Compile Include="Assets\Plugins\Soomla\AndroidJNIHandler.cs" />
      <Compile Include="Assets\Plugins\Soomla\Events.cs" />
      <Compile Include="Assets\Plugins\Soomla\IOS_ErrorCodes.cs" />
@@ -88,6 +101,11 @@
      <Compile Include="Assets\Plugins\TouchSenseIVTEffect.cs" />
      <Compile Include="Assets\Plugins\TouchSenseSingleDevice.cs" />
      <Compile Include="Assets\Plugins\TouchSenseWaveformEffect.cs" />
+     <Compile Include="Assets\Plugins\iOS\RevMobIos.cs" />
+     <Compile Include="Assets\Plugins\iOS\RevMobIosBanner.cs" />
+     <Compile Include="Assets\Plugins\iOS\RevMobIosFullscreen.cs" />
+     <Compile Include="Assets\Plugins\iOS\RevMobIosLink.cs" />
+     <Compile Include="Assets\Plugins\iOS\RevMobIosNotification.cs" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\TK2DROOT\tk2d\Shaders\LitSolidVertexColor.shader" />
      <None Include="Assets\PlayMaker\Readme.txt" />
