--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -18,7 +18,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_ANDROID;ENABLE_MICROPHONE;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;ENABLE_AUDIO_FMOD;ENABLE_NETWORK;ENABLE_MONO;ENABLE_PHYSICS;ENABLE_TERRAIN;ENABLE_CACHING;ENABLE_SUBSTANCE;ENABLE_GENERICS;UNITY_ANDROID_API;ENABLE_CLOTH;ENABLE_AUDIO;ENABLE_WWW;ENABLE_SHADOWS;UNITY_4_1_3;UNITY_4_1;DEVELOPMENT_BUILD;ENABLE_PROFILER;UNITY_EDITOR</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_ANDROID;ENABLE_MICROPHONE;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;ENABLE_AUDIO_FMOD;ENABLE_NETWORK;ENABLE_MONO;ENABLE_PHYSICS;ENABLE_TERRAIN;ENABLE_CACHING;ENABLE_SUBSTANCE;ENABLE_GENERICS;UNITY_ANDROID_API;ENABLE_CLOTH;ENABLE_AUDIO;ENABLE_WWW;ENABLE_SHADOWS;UNITY_4_1_4;UNITY_4_1;DEVELOPMENT_BUILD;ENABLE_PROFILER;UNITY_EDITOR</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -738,6 +738,8 @@
      <Compile Include="Assets\Scripts\Buttons\FAButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\HelpButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\OptionsButton.cs" />
+     <Compile Include="Assets\Scripts\Buttons\OptionsGEButton.cs" />
+     <Compile Include="Assets\Scripts\Buttons\OptionsLongevityButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\OptionsMusicButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\OptionsSoundButton.cs" />
      <Compile Include="Assets\Scripts\Buttons\PMButton.cs" />
@@ -768,6 +770,7 @@
      <Compile Include="Assets\Scripts\UnityMersenneTwister.cs" />
      <Compile Include="Assets\Scripts\UnityNormalDistribution.cs" />
      <Compile Include="Assets\Scripts\UpgradeDisplay.cs" />
+     <Compile Include="Assets\Scripts\optionDB.cs" />
      <Compile Include="Assets\Scripts\playerAnimController.cs" />
      <Compile Include="Assets\Store\Code\AndysApplesAssets.cs" />
      <Compile Include="Assets\Store\Code\BuyButton.cs" />
