--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -56,7 +56,7 @@
         </intent-filter>
       </receiver>
     </application>
-  <uses-feature android:glEsVersion="0x00010001" />
+  <!--<uses-feature android:glEsVersion="0x00010001" />-->
   <uses-permission android:name="com.android.vending.BILLING" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
