--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.Company.ProductName"
-    android:installLocation="preferExternal"
+    package="com.unity3d.player"
+	android:installLocation="preferExternal"
+	android:theme="@android:style/Theme.NoTitleBar"
     android:versionCode="1"
     android:versionName="1.0">
     <supports-screens
@@ -13,10 +14,11 @@
         android:anyDensity="true"/>
 
     <application
-        android:icon="@drawable/app_icon"
+		android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:debuggable="true" android:name="com.soomla.store.SoomlaApp">
         <activity android:name="com.unity3d.player.UnityPlayerProxyActivity"
+                  android:launchMode="singleTask"
                   android:label="@string/app_name"
                   android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
             <intent-filter>
@@ -25,27 +27,39 @@
             </intent-filter>
         </activity>
         <activity android:name="com.unity3d.player.UnityPlayerActivity"
+                  android:launchMode="singleTask"
                   android:label="@string/app_name"
                   android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
         </activity>
         <activity android:name="com.unity3d.player.UnityPlayerNativeActivity"
+                  android:launchMode="singleTask"
                   android:label="@string/app_name"
                   android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
             <meta-data android:name="android.app.lib_name" android:value="unity" />
             <meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="true" />
         </activity>
-        <activity android:name="com.unity3d.player.VideoPlayer"
+
+      <activity android:name="com.unity3d.player.VideoPlayer"
                   android:label="@string/app_name"
                   android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
-        </activity>
-        <activity android:name="com.google.ads.AdActivity"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-      <activity android:name="com.playhaven.src.publishersdk.content.PHContentView" android:theme="@android:style/Theme.Dialog" android:label="@string/app_name" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" android:screenOrientation="sensor">
       </activity>
+    
+			<activity android:name="com.chartboost.sdk.CBDialogActivity"
+				android:configChanges="orientation|keyboard|keyboardHidden"
+				android:windowSoftInputMode="adjustResize"
+				android:theme="@android:style/Theme.Translucent"
+				android:launchMode="singleTop">
+			</activity>
+			<activity android:name="com.chartboost.sdk.CBImpressionActivity" android:excludeFromRecents="true" android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+
       <activity
           android:name="com.revmob.ads.fullscreen.FullscreenActivity"
           android:configChanges="keyboardHidden|orientation" >
       </activity>
+
+      <activity android:name="com.google.ads.AdActivity"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+
       <service android:name="com.soomla.billing.BillingService" />
 
       <receiver android:name="com.soomla.billing.BillingReceiver">
@@ -55,12 +69,13 @@
           <action android:name="com.android.vending.billing.PURCHASE_STATE_CHANGED" />
         </intent-filter>
       </receiver>
-    </application>
-  <!--<uses-feature android:glEsVersion="0x00010001" />-->
+</application>
+
   <uses-permission android:name="com.android.vending.BILLING" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
   <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
+
 </manifest>
