--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,6 +44,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Analytics\Scripts\Analytics.cs" />
+     <Compile Include="Assets\CBMain.cs" />
      <Compile Include="Assets\NGUI\Scripts\Interaction\LanguageSelection.cs" />
      <Compile Include="Assets\NGUI\Scripts\Interaction\UIButton.cs" />
      <Compile Include="Assets\NGUI\Scripts\Interaction\UIButtonActivate.cs" />
@@ -763,6 +765,7 @@
      <Compile Include="Assets\Scripts\Mics\Advertisement\AdvertisementHandler.cs" />
      <Compile Include="Assets\Scripts\Mics\Advertisement\AdvertisementManager.cs" />
      <Compile Include="Assets\Scripts\OptionsDisplay.cs" />
+     <Compile Include="Assets\Scripts\PHGameEndAd.cs" />
      <Compile Include="Assets\Scripts\ShieldHitTrigger.cs" />
      <Compile Include="Assets\Scripts\Spawner.cs" />
      <Compile Include="Assets\Scripts\SpinRay.cs" />
@@ -969,6 +972,7 @@
      <None Include="Assets\Plugins\Android\build.xml" />
      <None Include="Assets\Toon_Explosion_V1\Documentation\03 - HTExplosion.cs parameters.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Depth.shader" />
+     <None Include="Assets\Analytics\README.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Transparent Colored (SoftClip).shader" />
      <None Include="Assets\PlayMaker\Versions\readme.txt" />
      <None Include="Assets\TK2DROOT\tk2d\Shaders\AdditiveVertexColor.shader" />
